# IT8951

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
IT8951/: IT8951.c  IT8951.h  Makefile  __init__.py  auto.py  constants.py  display.py  img_manip.c  interface.py  spi.c  spi.py  spi.pyx
src/IT8951/: display.py  interface.py
test/integration/: test.py  test_functions.py  test_xfer.py  time_full.py  time_partial.py
